--- a/public/cart/css/view-cart.webflow.css
+++ b/public/cart/css/view-cart.webflow.css
@@ -1,16 +1,3 @@
-.grid {
-  -ms-grid-columns: 0.25fr 1fr;
-  grid-template-columns: 0.25fr 1fr;
-}
-
-.button {
-  border-radius: 0px;
-  -webkit-transform: translate(400px, 0px);
-  -ms-transform: translate(400px, 0px);
-  transform: translate(400px, 0px);
-  text-align: left;
-}
-
 .list {
   margin-left: 0px;
   padding-left: 0px;
@@ -20,16 +7,6 @@
   width: 300px;
   height: 120px;
   margin-top: 10px;
-  list-style-type: none;
-}
-
-.list-item-2 {
-  height: 150px;
-  list-style-type: none;
-}
-
-.list-item-3 {
-  height: 150px;
   list-style-type: none;
 }
 
@@ -52,142 +29,6 @@
   background-clip: border-box;
   -o-object-fit: fill;
   object-fit: fill;
-}
-
-.div-block {
-  width: 1524px;
-}
-
-.heading-3 {
-  margin-top: -91px;
-  margin-right: 0px;
-  margin-left: 104px;
-}
-
-.heading-4 {
-  margin-left: 150px;
-}
-
-.button-2 {
-  width: 40px;
-  height: 40px;
-  margin-bottom: 5px;
-  margin-left: -256px;
-  padding-right: 0px;
-  clear: none;
-  background-image: url('../images/arrow.png');
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  -webkit-transform: translate(0px, 0px) translate(295px, 0px);
-  -ms-transform: translate(0px, 0px) translate(295px, 0px);
-  transform: translate(0px, 0px) translate(295px, 0px);
-}
-
-.div-block-2 {
-  overflow: visible;
-  width: 40px;
-  height: 40px;
-  margin-top: -50px;
-  margin-bottom: 0px;
-  margin-left: 190px;
-  background-color: #e9e9e9;
-  color: #ec3434;
-}
-
-.button-3 {
-  width: 40px;
-  height: 40px;
-  margin-left: 150px;
-  background-image: url('../images/arrowleft.png');
-  background-position: 50% 50%;
-  background-size: auto;
-  background-repeat: no-repeat;
-  -webkit-transform: translate(0px, 3px) translate(0px, -4px);
-  -ms-transform: translate(0px, 3px) translate(0px, -4px);
-  transform: translate(0px, 3px) translate(0px, -4px);
-}
-
-.text-block {
-  width: 40px;
-  height: 40px;
-  padding-top: 10px;
-  padding-left: 0px;
-  color: #707070;
-  text-align: center;
-  text-decoration: none;
-}
-
-.text-block-2 {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  width: 40px;
-  height: 40px;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: row;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  color: #000;
-  text-align: center;
-}
-
-.heading-5 {
-  display: block;
-  width: 150px;
-  margin-top: -92px;
-  margin-bottom: 0px;
-  margin-left: 115px;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-transform: translate(0px, 14px);
-  -ms-transform: translate(0px, 14px);
-  transform: translate(0px, 14px);
-}
-
-.heading-6 {
-  width: 100px;
-  margin-top: -1px;
-  margin-left: 115px;
-}
-
-.div-block-3 {
-  display: block;
-  width: 40px;
-  height: 15px;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  background-color: #616161;
-}
-
-.heading-7 {
-  width: 65px;
-  margin-top: 0px;
-  margin-left: 115px;
-  -webkit-transform: translate(0px, -2px);
-  -ms-transform: translate(0px, -2px);
-  transform: translate(0px, -2px);
 }
 
 .heading-8 {
@@ -283,10 +124,6 @@
   text-align: center;
 }
 
-.button-8 {
-  margin-top: 37px;
-}
-
 .div-block-4 {
   display: block;
   width: 300px;
@@ -337,14 +174,19 @@
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: start;
-  -webkit-align-items: flex-start;
-  -ms-flex-align: start;
-  align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   font-family: Tajawal, sans-serif;
   font-weight: 700;
 }
@@ -394,49 +236,31 @@
   direction: rtl;
 }
 
+.div-block-7 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: end;
+  -webkit-align-items: flex-end;
+  -ms-flex-align: end;
+  align-items: flex-end;
+}
+
+.heading-10 {
+  font-size: 32px;
+}
+
 @media screen and (max-width: 479px) {
-  .button {
-    width: auto;
-    border-radius: 5px;
-    background-color: #f03949;
-    -webkit-transform: translate(100px, -133px) translate(24px, 0px) translate(105px, 0px);
-    -ms-transform: translate(100px, -133px) translate(24px, 0px) translate(105px, 0px);
-    transform: translate(100px, -133px) translate(24px, 0px) translate(105px, 0px);
-    -webkit-transition: opacity 200ms ease;
-    transition: opacity 200ms ease;
-    text-align: center;
-  }
-
-  .heading {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    width: 120px;
-    height: auto;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-transform: translate(0px, 5px) translate(100px, -105px);
-    -ms-transform: translate(0px, 5px) translate(100px, -105px);
-    transform: translate(0px, 5px) translate(100px, -105px);
-    -o-object-fit: scale-down;
-    object-fit: scale-down;
-  }
-
-  .heading-2 {
-    width: 120px;
-    -webkit-transform: translate(86px, 0px);
-    -ms-transform: translate(86px, 0px);
-    transform: translate(86px, 0px);
-  }
-
-  .image {
-    position: absolute;
-    margin-left: 3px;
-  }
-
   .list-item {
     margin-top: 0px;
   }
@@ -445,24 +269,6 @@
     width: 80px;
     margin-top: 10px;
     margin-left: 15px;
-  }
-
-  .heading-5 {
-    height: 30px;
-    margin-top: -62px;
-    -webkit-transform: translate(0px, -14px);
-    -ms-transform: translate(0px, -14px);
-    transform: translate(0px, -14px);
-  }
-
-  .heading-6 {
-    -webkit-transform: translate(0px, -15px);
-    -ms-transform: translate(0px, -15px);
-    transform: translate(0px, -15px);
-  }
-
-  .heading-7 {
-    margin-top: 0px;
   }
 
   .heading-8 {
@@ -509,9 +315,18 @@
   }
 
   .div-block-4 {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
     width: 300px;
     margin-right: auto;
     margin-left: auto;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
   }
 
   .button-9 {
@@ -520,8 +335,14 @@
     display: -ms-flexbox;
     display: flex;
     width: 270px;
+    margin-top: 0px;
     margin-right: auto;
     margin-left: auto;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     -webkit-box-pack: center;
     -webkit-justify-content: center;
     -ms-flex-pack: center;
