--- a/public/checkout/css/espacebot-info-form-3d73ef.webflow.css
+++ b/public/checkout/css/espacebot-info-form-3d73ef.webflow.css
@@ -42,6 +42,7 @@
   bottom: 0%;
   display: block;
   width: 250px;
+  margin-top: 20px;
   margin-left: 0px;
   float: none;
   clear: left;
@@ -71,6 +72,8 @@
   display: flex;
   margin-right: auto;
   margin-left: auto;
+  padding-right: 10px;
+  padding-left: 10px;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
   -ms-flex-pack: center;
@@ -121,11 +124,163 @@
   border-radius: 10px;
 }
 
+.field-label {
+  margin-top: 20px;
+}
+
+.field-label-3 {
+  margin-top: 20px;
+}
+
+.success-message {
+  background-color: #fff;
+}
+
+.text-block {
+  padding-top: 20px;
+  font-size: 32px;
+  line-height: 32px;
+  text-align: center;
+}
+
 .error-message {
+  margin-right: 30px;
+  margin-left: 30px;
+  padding-left: 0px;
   border-radius: 5px;
 }
 
 .text-block-2 {
+  font-size: 18px;
+  text-align: center;
+}
+
+.field-label-4 {
+  margin-top: 20px;
+}
+
+.field-label-5 {
+  margin-top: 20px;
+}
+
+.field-label-6 {
+  margin-top: 20px;
+}
+
+.field-label-7 {
+  margin-top: 20px;
+}
+
+.field-label-8 {
+  margin-top: 20px;
+}
+
+.text-block-3 {
+  padding-top: 10px;
+  padding-right: 15px;
+  text-align: right;
+}
+
+.text-block-4 {
+  padding-top: 10px;
+  padding-right: 15px;
+  text-align: right;
+}
+
+.text-block-5 {
+  padding-top: 10px;
+  padding-right: 15px;
+  text-align: right;
+}
+
+.text-block-6 {
+  padding-top: 10px;
+  padding-right: 15px;
+  text-align: right;
+}
+
+.text-block-7 {
+  padding-top: 10px;
+  padding-right: 15px;
+  text-align: right;
+}
+
+.text-block-8 {
+  padding-top: 10px;
+  padding-right: 15px;
+  text-align: right;
+}
+
+.text-block-9 {
+  margin-bottom: 20px;
+  padding-top: 10px;
+  padding-right: 15px;
+  text-align: right;
+}
+
+.button {
+  width: 250px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-top: 10px;
+  border-radius: 5px;
+  background-color: #000;
+}
+
+.button-2 {
+  width: 250px;
+  margin-top: 10px;
+  margin-right: auto;
+  margin-left: auto;
+  border-radius: 5px;
+  background-color: #000;
+  text-align: center;
+}
+
+.div-block-4 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  font-size: 24px;
+  text-align: center;
+}
+
+.utility-page-wrap {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  max-height: 100%;
+  max-width: 100%;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.utility-page-content {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 260px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   text-align: center;
 }
 
@@ -190,8 +345,20 @@
   }
 
   .body {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    margin-right: auto;
     margin-left: auto;
+    padding-right: 0px;
+    padding-left: 0px;
     clear: none;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
     font-family: Tajawal, sans-serif;
     font-size: 18px;
   }
@@ -202,6 +369,7 @@
     display: -ms-flexbox;
     display: flex;
     margin-right: auto;
+    margin-bottom: auto;
     margin-left: auto;
     padding-right: 0px;
     padding-left: 0px;
@@ -237,23 +405,12 @@
   }
 
   .field-label {
+    margin-top: 20px;
     font-family: Tajawal, sans-serif;
   }
 
-  .text-span {
-    margin-right: auto;
-    margin-left: auto;
-    direction: rtl;
-    text-align: right;
-  }
-
-  .field-label-2 {
-    margin-right: auto;
-    margin-left: auto;
-    direction: ltr;
-  }
-
   .field-label-3 {
+    margin-top: 20px;
     direction: rtl;
   }
 
@@ -262,19 +419,19 @@
   }
 
   .radio-button {
-    width: 20px;
-    height: 20px;
+    width: 15px;
+    height: 15px;
     direction: rtl;
     text-align: left;
   }
 
   .radio-button-2 {
-    width: 20px;
-    height: 20px;
+    width: 15px;
+    height: 15px;
   }
 
   .success-message {
-    margin-top: auto;
+    margin-top: 0px;
     margin-right: auto;
     margin-left: auto;
     -webkit-align-self: center;
@@ -290,13 +447,26 @@
 
   .image {
     display: inline-block;
-    margin-top: 43px;
+    margin-top: 0px;
   }
 
   .div-block-2 {
-    display: inline-block;
+    display: block;
     margin-right: auto;
     margin-left: auto;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     grid-auto-columns: 1fr;
     -ms-grid-columns: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
@@ -305,18 +475,29 @@
   }
 
   .text-block {
-    margin-top: 210px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    margin-top: auto;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     direction: rtl;
     font-size: 24px;
-    font-weight: 700;
+    font-weight: 500;
   }
 
   .error-message {
     position: absolute;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    margin-left: auto;
-    padding-right: 10px;
+    margin: 0px auto;
+    padding-right: 0px;
+    padding-left: 0px;
     -webkit-align-self: flex-end;
     -ms-flex-item-align: end;
     align-self: flex-end;
@@ -328,17 +509,10 @@
     -webkit-flex: 1;
     -ms-flex: 1;
     flex: 1;
-    -webkit-transform: translate(0px, 62px);
-    -ms-transform: translate(0px, 62px);
-    transform: translate(0px, 62px);
+    -webkit-transform: translate(0px, 50px);
+    -ms-transform: translate(0px, 50px);
+    transform: translate(0px, 50px);
     text-align: center;
-  }
-
-  .div-block-3 {
-    display: block;
-    width: 200px;
-    margin-right: auto;
-    margin-left: auto;
   }
 
   .text-block-2 {
@@ -346,6 +520,115 @@
     margin-right: auto;
     margin-left: auto;
     font-weight: 500;
+    text-align: center;
+  }
+
+  .field-label-4 {
+    margin-top: 20px;
+  }
+
+  .field-label-5 {
+    margin-top: 20px;
+  }
+
+  .field-label-6 {
+    margin-top: 20px;
+  }
+
+  .field-label-7 {
+    margin-top: 20px;
+  }
+
+  .div-block-3 {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+
+  .text-block-3 {
+    margin-bottom: 10px;
+    padding-right: 15px;
+    font-size: 20px;
+    font-weight: 500;
+    text-align: right;
+  }
+
+  .text-block-4 {
+    margin-bottom: 10px;
+    padding-right: 15px;
+    font-weight: 500;
+    text-align: right;
+  }
+
+  .text-block-5 {
+    margin-bottom: 10px;
+    padding-right: 15px;
+    font-weight: 500;
+    text-align: right;
+  }
+
+  .text-block-6 {
+    margin-bottom: 10px;
+    padding-right: 15px;
+    font-weight: 500;
+    text-align: right;
+  }
+
+  .text-block-7 {
+    margin-bottom: 10px;
+    padding-right: 15px;
+    font-weight: 500;
+    text-align: right;
+  }
+
+  .text-block-8 {
+    margin-bottom: 10px;
+    padding-right: 15px;
+    font-weight: 500;
+    text-align: right;
+  }
+
+  .text-block-9 {
+    margin-bottom: 20px;
+    padding-right: 15px;
+    font-weight: 500;
+    text-align: right;
+  }
+
+  .button {
+    width: 250px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    background-color: #000;
+    font-weight: 500;
+    text-align: center;
+  }
+
+  .button-2 {
+    width: 250px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    background-color: #000;
+    font-weight: 500;
+    text-align: center;
+  }
+
+  .div-block-4 {
+    display: block;
     text-align: center;
   }
 }
