--- a/public/checkout/css/espacebot-info-form-3d73ef.webflow.css
+++ b/public/checkout/css/espacebot-info-form-3d73ef.webflow.css
@@ -218,6 +218,14 @@
   text-align: right;
 }
 
+
+.text-block-10 {
+  margin-bottom: 20px;
+  padding-top: 10px;
+  padding-right: 15px;
+  text-align: right;
+}
+
 .button {
   width: 250px;
   margin-right: auto;
@@ -283,12 +291,21 @@
   flex-direction: column;
   text-align: center;
 }
+.heading-9 {
+  margin-bottom: 10px;
+  padding-right: 15px;
+  text-align: right;
+}
+
 
 @media screen and (max-width: 991px) {
   .body {
     margin-top: 10px;
     margin-left: auto;
   }
+
+  
+
 }
 
 @media screen and (max-width: 767px) {
@@ -299,6 +316,7 @@
   .text-block-2 {
     font-size: 18px;
   }
+
 }
 
 @media screen and (max-width: 479px) {
@@ -603,6 +621,13 @@
   }
 
   .text-block-9 {
+    margin-bottom: 20px;
+    padding-right: 15px;
+    font-weight: 500;
+    text-align: right;
+  }
+
+  .text-block-10 {
     margin-bottom: 20px;
     padding-right: 15px;
     font-weight: 500;
