--- a/public/cart/css/view-cart.webflow.css
+++ b/public/cart/css/view-cart.webflow.css
@@ -17,7 +17,7 @@
   margin-left: 10px;
   border-radius: 5px;
   background-color: #f38ba0;
-  background-image: url('../images/greenshirt.png');
+  /* background-image: url('../images/untitled.jpg'); */
   background-position: 0px 0px;
   background-size: auto;
   background-repeat: no-repeat;
