BETA pre_Launch 3

--- a/public/cart/css/view-cart.webflow.css
+++ b/public/cart/css/view-cart.webflow.css
@@ -16,7 +16,7 @@
   margin-top: 10px;
   margin-left: 10px;
   border-radius: 5px;
-  background-color: #f38ba0;
+  background-color: #ffffff;
   /* background-image: url('../images/untitled.jpg'); */
   background-position: 0px 0px;
   background-size: auto;
